# zombi

./: .dockerignore  .gitattributes  .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  SPEC.md  VERSIONING.md  build.rs  deny.toml  docker-compose.monitoring.yml  docker-compose.yml  prometheus.yml  roadmap.md  testing_strategy.md  v0.1_plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
benches/: write_throughput.rs
docs/: AB_PERFORMANCE_TESTING.md  BRANCHING_STRATEGY.md  BRANCHING_STRATEGY_SIMPLE.md  PERFORMANCE_BOTTLENECK_ANALYSIS.md  RCA-2026-01-28-avro-schema-caching.md  architecture-review.md  openapi.yaml
docs/archive/: PLAN.md  README.md  roadmap.md  v0.1_plan.md
docs/aws/: GP2_TO_GP3_MIGRATION.md  IAM_S3_SETUP.md  ICEBERG_VERIFICATION.md  SCALING_ALB_REDIS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_proto.rs  fuzz_topic_name.rs  fuzz_write.rs
infra/monitoring/: cloudwatch-agent.json  docker-compose.yml  install-cloudwatch.sh  prometheus.yml
infra/monitoring/grafana/: README.md  zombi-dashboard.json
infra/terraform/: .gitignore  README.md  main.tf  terraform.tfvars  user_data.sh  user_data_loadgen.sh  variables.tf
load-test-results-20260128/: 2GBPS_ANALYSIS.md  LOAD_TEST_REPORT.md  SUMMARY.md  bulk_write_2min.json  final_stats.json  peak_bulk_5min.json  peak_single.json  single_write_2min.json
load-test-results-20260128/load-run-20260128-074615/20260128_074615_custom/: summary.json
load-test-results-20260128/load-run-20260128-074615/20260128_075617_custom/: summary.json
load-test-results-20260128/load-run-20260128-074615/20260128_080618_custom/: summary.json
load-test-results-20260128/load-run-20260128-074615/20260128_081931_custom/: summary.json
load-test-results-20260128/load-run-20260128-074615/20260128_082932_custom/: summary.json
load-test-results-20260128/load-run-20260128-074615/20260128_083050_custom/: summary.json
load-test-results-20260128/load-run-20260128-074615/20260128_083101_custom/: summary.json
load-test-results-20260128/load-run-20260128-074615/20260128_091118_custom/: summary.json
proto/: event.proto
scripts/: check-docs-coherence.sh  deploy.sh  pre-commit  provision.sh  setup-branch-protection.sh  setup-dev-env.sh
src/: lib.rs  main.rs
src/api/: catalog.rs  handlers.rs  mod.rs
src/contracts/: cold_storage.rs  error.rs  flusher.rs  mod.rs  schema.rs  sequence.rs  storage.rs
src/flusher/: mod.rs
src/metrics/: histogram.rs  mod.rs  registry.rs
src/storage/: catalog.rs  cold_storage_backend.rs  combiner.rs  compaction.rs  iceberg.rs  iceberg_storage.rs  mod.rs  parquet.rs  payload_extractor.rs  retry.rs  rocksdb.rs  s3.rs  sequence.rs
tests/: concurrency_tests.rs  crash_recovery_tests.rs  integration_tests.rs  property_tests.rs
tests/common/: mod.rs
tools/: BENCHMARK_README.md  README.md  aws_peak_performance.sh  bandwidth_test.py  benchmark.py  benchmark_ec2.sh  benchmark_local.sh  compare_encodings.py  config.py  load_test.py  load_test_proto.py  output.py  peak_performance.py  peak_performance_bulk.py  scenario_test.py  sustained_test.py  utilization_sweep.py  zombi-load.yaml.example  zombi_load.py
tools/archive/: LOAD_TESTING_GUIDE.md  LOAD_TEST_README.md  ec2_test.py  payload_test.py  proto_json_benchmark.py  protobuf_test.py  quick_json_test.py  quick_test.sh  run_load_tests.py  run_max_test.py  simple_pb_test.py  simple_protobuf_test.py  simple_test.py  test_payload_sizes.py  test_single.py
tools/lib/: __init__.py  s3_verifier.py
tools/producer/: consumer.py  events.proto  producer.py  requirements.txt
tools/results/: .gitignore
tools/runners/: __init__.py  base.py  peak_runner.py  scenario_runner.py
tools/scenarios/: __init__.py  backpressure.py  base.py  cold_storage.py  consistency.py  consumer.py  iceberg_read.py  mixed.py  producer.py
(+14 files in other folders)
