[package]
name = "zombi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rocksdb = "0.22"
aws-sdk-s3 = "1"
aws-config = "1"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
dashmap = "5"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[build-dependencies]
prost-build = "0.12"
